force-app/main/default/objects/Project_Code__c/Project_Code__c.object-meta.xml
<CustomObject>
    <label>Project Code</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>