force-app/main/default/objects/Project_Code__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <label>Auto-Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>