force-app/main/default/objects/Project_Code__c/fields/Container_Type__c.field-meta.xml
<CustomField>
    <fullName>Container_Type__c</fullName>
    <label>Container Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dumpster</fullName>
            </value>
            <value>
                <fullName>Compactor</fullName>
            </value>
            <value>
                <fullName>Open Top</fullName>
            </value>
            <value>
                <fullName>Toter</fullName>
            </value>
            <value>
                <fullName>Portalets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>