force-app/main/default/objects/Project_Code__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary and Permanent</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>