force-app/main/default/objects/Project_Code__c/fields/Length_of_Project_Days__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Project_Days__c</fullName>
    <label>Length of Project (Days)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>