force-app/main/default/objects/Project_Code__c/fields/Pricing_information_if_diff_from_CM__c.field-meta.xml
<CustomField>
    <fullName>Pricing_information_if_diff_from_CM__c</fullName>
    <label>Pricing info if different from CMT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>