force-app/main/default/objects/Project_Code__c/fields/Pricing_information_if_different_from_CM__c.field-meta.xml
<CustomField>
    <fullName>Pricing_information_if_different_from_CM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox field to check if Pricing information is different from CMT.</description>
    <label>Use CMT pricing?</label>
    <type>Checkbox</type>
</CustomField>