force-app/main/default/objects/Project_Code__c/fields/Project_Code_Header__c.field-meta.xml
<CustomField>
    <fullName>Project_Code_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self Look up to Project code Header</description>
    <label>Parent Project Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Code__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Project Code Header</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Code__c</referenceTo>
    <relationshipName>Project_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>