force-app/main/default/objects/Project_Code__c/fields/Project_Code_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Code_ID__c</fullName>
    <label>Project Code ID( Do not use)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>