force-app/main/default/objects/Project_Code__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>System generated ID &lt;Client code&gt;-&lt;Sequence No.&gt;</description>
    <formula>Client_Account__r.Customer_Code__c + &apos;-&apos; +  Sequence_Number__c</formula>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>