force-app/main/default/objects/Project_Code__c/fields/ProjectCode_Id__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode_Id__c</fullName>
    <formula>Client_Account__r.Customer_Code__c&amp;&quot;-&quot;&amp;IF( RecordType.DeveloperName = &quot;Project_Code_Detail&quot; ,TEXT(Project_Code_Header__r.Project_Code_ID__c )&amp;&quot;-&quot;,&quot;&quot;)&amp;TEXT(Project_Code_ID__c)</formula>
    <label>Project Code ID</label>
    <type>Text</type>
</CustomField>