force-app/main/default/objects/Project_Code__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Sequence Number</label>
    <type>AutoNumber</type>
</CustomField>