force-app/main/default/objects/Project_Code__c/fields/Which_Assets_come_to_PS__c.field-meta.xml
<CustomField>
    <fullName>Which_Assets_come_to_PS__c</fullName>
    <label>Which Assets come to PS?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Temp</fullName>
            </value>
            <value>
                <fullName>Perm</fullName>
            </value>
            <value>
                <fullName>Temp and Perm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>