force-app/main/default/objects/Project_Code__c/fields/Who_is_the_Contact__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who is the Contact for the Project?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Project_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>