force-app/main/default/objects/Project_Code__c/fields/WM_User__c.field-meta.xml
<CustomField>
    <fullName>WM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>