force-app/main/default/objects/Project_Code__c/recordTypes/Project_Code_Detail.recordType-meta.xml
<RecordType>
    <fullName>Project_Code_Detail</fullName>
    <active>true</active>
    <label>Project Code Detail</label>
</RecordType>