force-app/main/default/objects/Project_Code__c/recordTypes/Project_Code_Header.recordType-meta.xml
<RecordType>
    <fullName>Project_Code_Header</fullName>
    <active>true</active>
    <label>Project Code Header</label>
</RecordType>