force-app/main/default/objects/Project_Code__c/validationRules/Account_mismatch_child_parent_project.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_mismatch_child_parent_project</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Project_Code_Header__c )),
RecordType.DeveloperName  = &quot;Project_Code_Detail&quot;,
Project_Code_Header__r.Client_Account__c  &lt;&gt;  Client_Account__c
)</errorConditionFormula>
    <errorMessage>Client Account should be same on the Project and Sub Project.</errorMessage>
</ValidationRule>