force-app/main/default/objects/Project_Code__c/validationRules/Either_EndDate_Or_Project_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_EndDate_Or_Project_Code</fullName>
    <active>true</active>
    <description>This rule is to validate User to enter either the Project End Date or the Length of Project. Both cannot be entered simultaneously.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Project_Code_Detail&quot;,AND( NOT(ISBLANK( End_Date__c )), NOT(ISBLANK( Length_of_Project_Days__c ) )  ))</errorConditionFormula>
    <errorMessage>Please enter either the Project End Date or the Length of Project. Both cannot be entered simultaneously.</errorMessage>
</ValidationRule>