force-app/main/default/objects/Project_Code__c/validationRules/End_Date_should_be_Greater.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_should_be_Greater</fullName>
    <active>true</active>
    <description>End Date should be greater than the provided Effective Date</description>
    <errorConditionFormula>End_Date__c  &lt;  Effective_Date__c</errorConditionFormula>
    <errorMessage>End Date should be greater than Effective Date.</errorMessage>
</ValidationRule>