force-app/main/default/objects/Project_Code__c/validationRules/Start_Date_or_Length_of_the_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_or_Length_of_the_Project</fullName>
    <active>false</active>
    <description>An user should enter either Start Date or Length of the Project. Cannot enter both.</description>
    <errorConditionFormula>AND(  NOT(ISBLANK( Effective_Date__c )),
NOT( ISBLANK(Length_of_Project_Days__c ) ) )</errorConditionFormula>
    <errorDisplayField>Client_Account__c</errorDisplayField>
    <errorMessage>Please enter either Start date or Length of the Project</errorMessage>
</ValidationRule>