force-app/main/default/objects/Project_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Client_Account__c</columns>
    <columns>NAME</columns>
    <columns>Project_Code_ID__c</columns>
    <columns>Project_ID__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Company_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>